--- a/Spel1/.project
+++ b/Spel1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Spel1</name>
+	<name>Game1_Jumper</name>
 	<comment></comment>
 	<projects>
 	</projects>
